--- a/examples/hello/deno.json
+++ b/examples/hello/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "serve": "deno run -A --watch=pages/ serve.js",
-    "build": "deno run -A build.js"
+    "serve": "deno run -A --watch=pages/ serve.ts",
+    "build": "deno run -A build.ts"
   },
   "importMap": "./import_map.json"
 }
