Begin converting code to typescript, rename the "serve" script to "start"

--- a/examples/hello/deno.json
+++ b/examples/hello/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "serve": "deno run -A --watch=pages/ serve.ts",
+    "start": "deno run -A --watch=pages/ start.ts",
     "build": "deno run -A build.ts"
   },
   "importMap": "./import_map.json"
