--- a/www/deno.json
+++ b/www/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start": "deno run -A dev.ts",
+    "start": "deno run -A --watch=pages/ dev.ts",
     "build": "deno run -A build.ts"
   },
   "importMap": "./import_map.json"
